--- a/shared/remote.tf.sample
+++ b/shared/remote.tf.sample
@@ -4,7 +4,7 @@ terraform {
     organization = "example"
 
     workspaces {
-      name = "shared_infrastructure"
+      name = "shared"
     }
   }
 }
