--- a/terraform/package.json
+++ b/terraform/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "terrafile": "terrafile install"
+    "terrafile": "terrafile install",
+    "plan": "terraform plan"
   },
   "author": "",
   "license": "MIT",
